--- a/Books/2024.05_Hands-On_NLP/Ch06.语言模型.md
+++ b/Books/2024.05_Hands-On_NLP/Ch06.语言模型.md
@@ -70,3 +70,103 @@ $$
 需要特别注意的是, 词表不同的两个语言模型, 其困惑度是不可比较的, 显然, 词表较小的语言模型平均会给每个词更高的概率, 因而更有可能具有较低的困惑度, 极端情况下, 如果词表只包含 `[UNK]` 这一个词, 那么模型的困惑度可以达到完美的 1.
 但词表过小的语言模型会将过多的词当作 `[UNK]`, 缺乏区分度, 因而不是一个好的语言模型.
 因此, 要比较不同的语言模型方法时, 需要使用统一的词表.
+
+## 6.2.$n$ 元语法模型
+
+前一节使用概率乘法公式分解文字序列的概率, 但无法对分解得到的条件概率进行估算.
+为了估算这些条件概率, 可以引入马尔可夫假设, 即假设每个词只依赖它之前的 $n-1$ 个词.
+
+$$
+    P(w_i|w_1,\cdots,w_{i-1}) = P(w_i|w_{i-n+1},\cdots,w_{i-1})
+$$
+
+上述方法被称为 $n$ 元语法模型.
+所谓的 $n$ 元语法是指文本中的连续 $n$ 个词.
+- 最简单的情况为**一元语法 (Unigram) 模型**: $P(w_1,\cdots,w_n) = \prod_{i} P(w_i)$.
+一元语法模型假设每个词出现的概率独立于其他词, 这类似于朴素贝叶斯模型所做的假设.
+- **二元语法 (Bigram) 模型** 则假设每个词只与上一个词有关, 而和其他词无关: $P(w_i|w_1,\cdots,w_{i-1}) = P(w_i|w_{i-1})$.
+- 类似地, 可以定义三元语法模型, 四元语法模型等.
+
+由于 $n$ 元语法模型对于条件概率的限制条件是只包含 $n-1$ 个词的序列, 因此当 $n$ 较小时, 可能的条件序列也相对较少, 可以从语料库中通过统计频率来估算.
+
+---
+
+$n$ 元语法模型的**缺点**:
+- 无法建模所谓的长距离依赖 (即距离大于 $n$ 的两个词之间的依赖关系).
+长距离依赖在自然语言中很常见, 例如英语中动词所采用的单复数形式取决于主语, 但动词与其主语之间可能间隔任意多个词 (如对于一个很长的定语从句).
+- 需要存储大量的条件概率, 当 $n$ 较大时模型会非常巨大.
+
+尽管有这些缺点, $n$ 元语法模型仍有很不错的性能, 在神经网络语言模型出现之前是最为成功的语言模型.
+
+---
+
+下面讨论如何从语料库中估算 $n$ 元语法模型的条件概率.
+
+最简单的方式是最大似然估计:
+
+$$
+    P(w_i|w_{i-n+1},\cdots,w_{i-1}) = \dfrac{count(w_{i-n+1},\cdots,w_{i-1},w_i)}{count(w_{i-n+1},\cdots,w_{i-1})}
+$$
+
+但这样做的一个常见问题是**数据稀疏性问题**: 尽管限制了序列的长度, 但是不同的 $n$ 元语法仍然是非常多的, 因此一些合理的 $n$ 元语法可能不会在训练语料库中出现, 从而导致相应的条件概率估算为 0. 模型会将包含这些 $n$ 元语法的文本的概率计算为 0, 这是不合理的.
+
+常见的处理数据稀疏性问题的方法有以下几类: 
+- 平滑法 (如拉普拉斯平滑), 
+- 回退法: 找不到对应的 $n$ 元语法时使用 $n-1$ 元语法, 依次类推,
+- 插值法: 将 $n$ 元语法模型, $n-1$ 元语法模型等一系列模型加权平均.
+
+注: 其中最为成功的方法是改良型 Kneser-Ney 平滑, 参阅 "Scalable Modified Kneser-Ney Language Model Estimation (2013)".
+
+一个著名的 $n$ 元语法数据集和可视化界面是 Google Ngram Viewer, 包含几百年来多种语言的公开文献中 $n$ 元语法的出现频率统计, 可以查询官网了解详细信息.
+
+## 6.3.循环神经网络
+
+基于神经网络的语言模型可以避免 $n$ 元语法模型的各种缺点.
+神经网络语言模型中最基础的模型之一是**循环神经网络 (Recurrent Neural Network, RNN)**, 它使用隐状态 (Hidden State) 来保存历史信息, 并使用循环结构逐一处理输入序列中的每一个元素.
+接下来首先介绍最基本的循环神经网络语言模型, 然后介绍循环神经网络的两个著名变体: **长短期记忆 (Long Short-Term Memory, LSTM)** 和**门控循环单元 (Gated Recurrent Unit, GRU)**, 最后介绍多层双向循环神经网络.
+
+### 6.3.1.RNN
+
+循环神经网络的基本思想是在计算文字序列中每个词的条件概率时, 计算一个稠密向量来表示条件 (也就是这个词的前置序列) 所包含的信息, 然后用该向量来计算条件概率分布.
+
+在循环神经网络的模型结构中, 每一步网络的输入包含两部分:
+- 历史输入 $\mathbf{h}^{(t-1)}$, 是前置序列的总结, 称为隐状态;
+- 新的输入 $\mathbf{x}^{(t)}$, 此处为词 $w_t$ 所对应的词嵌入;
+
+模型的输出经过 Softmax 函数处理得到下一步的词的分布, 例如 `自然语言` 的下一个词可能是 `处 (理)`, `生 (成)` 等.
+计算公式如下:
+
+隐状态: $\mathbf{h}^{(t)} = \sigma(\mathbf{W}_x \mathbf{x}^{(t)} + \mathbf{W}_h \mathbf{h}^{(t-1)} + \mathbf{b}_h)$;
+输出: $\hat{y}^{(t)} = \text{softmax}(\mathbf{W}_o \\mathbf{h}^{(t)} + \mathbf{b}_o)$
+ 
+- $\mathbf{W}_x$ 为输入的参数; 
+- $\mathbf{W}_h, \mathbf{b}_h$ 为隐藏层的参数;
+- $\mathbf{W}_o, \mathbf{b}_o$ 为输出层的参数;
+- $\sigma$ 为激活函数;
+- $\mathbf{h}^{(0)}$ 为初始隐状态, 在没有其他信息的情况下一般设置为全零.
+
+循环神经网络的显著好处在于, 解除了 $n$ 元语法模型中对条件序列长度的限制, 即不再使用马尔可夫假设, 因而每一时刻的输出 (即条件概率分布) 都基于整个前置序列作为条件.
+并且由于不需要像 $n$ 元语法模型那样存储大量的条件概率, 循环神经网络往往比典型的 $n$ 元语法模型小, 即具有更少的模型参数.
+
+下面讨论循环神经网络的训练.
+在每一步 $t$, 训练损失函数为下一个词的预测分布 $\hat{y}^{(t)}$ 与真实分布 $y^{(t)}$ (即下一个词 $w_{t+1}$ 的独热编码) 的交叉熵 (Cross Entropy):
+
+$$
+    J^{(t)}(\theta) = -\sum_{w\in V} y_w^{(t)}\log \hat{y}_w^{(t)} = -\log \hat{y}_{w_{t+1}}^{(t)}
+$$
+
+### 6.3.2.LSTM
+
+### 6.3.3.多层双向 RNN
+
+## 6.4.注意力机制
+
+
+
+## 6.5.Transformer
+
+## 总结
+
+本章介绍了语言模型的基本概念, 然后介绍了一系列语言模型方法, 包括传统的 $n$ 元语法模型, 循环神经网络及其变体, 可以建模长距离依赖的注意力机制, 以及纯粹基于注意力机制的 Transformer 模型.
+
+值得一提的是, 本章介绍的 RNN 与 Transformer 模型除了用于语言模型, 还可以用于很多其他任务, 例如文本表示, 序列标注, 文本生成, 其中文本表示任务中这些模型的使用已经在 [Ch03.文本表示](Ch03.文本表示.md) 的 4.3 节讨论, 其余任务将在后面的章节中讨论.
