--- a/Models/Speech_Neural_Codec/2024.06.18_Articulatory_Encodec.md
+++ b/Models/Speech_Neural_Codec/2024.06.18_Articulatory_Encodec.md
@@ -21,7 +21,7 @@
   - [ArXiv](https://arxiv.org/abs/2406.12998)
   - [DOI]()
   - [Github]()
-  - [Demo]()
+  - [Demo](https://articulatoryencodec.github.io)
   - [Scholar](https://scholar.google.com/scholar?cluster=)
 - 标签:
   - ?
@@ -78,7 +78,7 @@
 > We will open-source the code and model checkpoints upon publication.
 > The ***articulatory encodec*** shows a minimal loss of intelligibility and quality compared to the original speech audio.
 >
-> Compared to existing neural coding of speech \cite{choi2021nansy, choi2022nansy++, zeghidour2021soundstream, defossez2022encodec, ju2024naturalspeech}, representing speech as articulatory features has following benefits:
+> Compared to existing neural coding of speech (choi2021nansy; choi2022nansy++; [SoundStream [20]](2021.07.07_SoundStream.md); [EnCodec [21]](2022.10.24_EnCodec.md); [FACodec [22]](2024.03.05_FACodec.md)), representing speech as articulatory features has following benefits:
 >
 > - **Low-dimensionality**: The articulatory features have only 14 channels with 50 Hz sampling rate.
 > This is significantly lower than the previous acoustic features or neural embedding of speech. 
@@ -91,7 +91,7 @@
 
 ## 2.Related Works: 相关工作
 
-### Electromagnetic Articulography
+### A.Electromagnetic Articulography
 
 > Electromagnetic articulography (EMA) measures time-varying displacements of vocal tract articulators synchronously while speaking.
 > Typically, sensors are placed on the upper lip (UL), lower lip (LL), lower incisor (LI), tongue tip (TT), tongue blade (TB), and tongue dorsum (TD) (Fig. \ref{fig:pipeline}) \cite{rebernik2021review}.
@@ -100,7 +100,7 @@
 > Given these properties, EMA has been widely accepted for studying articulatory bases of speech, providing biophysical evidence for many linguistic or cognitive theories of speech production \cite{ browman1992articulatory, rebernik2021review, chartier2018encoding}.
 > However, EMA has been significantly limited to scale due to the complicated nature and high cost of the collection procedure.
 
-### Acoustics-to-Articulation Inversion
+### B.Acoustics-to-Articulation Inversion
 
 > To replace the complicated data collection procedure, acoustic-to-articulatory inversion (AAI) models have been actively developed to predict EMA directly from speech audio \cite{ghosh2010generalized,  ghosh2011subject, liu2015deep, chartier2018encoding, anumanchipalli2019speech, wu2023speakerind, attia2023improving, siriwardena2023secret, gao2024copysynthesis}.
 > However, the individual variance in vocal tract anatomy across speakers induces inconsistent placements of sensors, which has posed a significant barrier to developing a model that can apply to unseen speakers \cite{rahim1993annartsynth, wu2023speakerind, attia2023improving, siriwardena2023secret}.
@@ -109,7 +109,7 @@
 > This suggests that individual articulatory spaces are lying on the same linear space so that an articulatory space of any speaker can be a hypothetical universal template space of articulation.
 > We empirically prove this statement by leveraging a single-speaker AAI model as a universal articulatory encoder for our codec framework. %Therefore, one good AAI model fit to a single speaker's EMA sensor arrangement can be used as a universal AAI model. %Furthermore, an AAI model is implemented by a frozen speech SSL model with a linear head inserted in the later layer of Transformer encoder where speaker information is marginalized out.  
 
-### Articulatory Synthesis
+### C.Articulatory Synthesis
 
 > Articulatory synthesis aims to generate speech audio from articulatory features.
 > A century of efforts have been made to build articulatory synthesizers for basic research of speech \cite{dudley1939synthetic, dudley1939remaking, dunn1950calculation, stevens1953electrical, rosen1958dynamic, mermelstein1973articulatory, rubin1981articulatory, maeda1982digital, scully1990articulatory}.
@@ -118,10 +118,10 @@
 > A recent study shows that a GAN-based generative model can directly synthesize speech waveform from articulatory features with high intelligibility \cite{wu2022artsynth}.
 > However, to our knowledge, none of the existing approaches has achieved industrial-level performance, which requires high intelligibility, quality, and generalizability across unseen speakers. 
 
-### Neural Codec of Speech
+### D.Neural Codec of Speech
 
 > Many deep learning methods have been proposed to learn data-driven representations of speech.
-> Various autoencoder methods have been suggested to jointly train encoders that compress audio into low-bitrate discrete units \cite{van2017neural, zeghidour2021soundstream, defossez2022encodec} or decompose speech into different factors \cite{choi2022nansy++, zhang2023speechtokenizer, ju2024naturalspeech}, and decoders that reconstruct speech from encoded features with minimal loss of information.
+> Various autoencoder methods have been suggested to jointly train encoders that compress audio into low-bitrate discrete units ([VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md); [SoundStream [20]](2021.07.07_SoundStream.md); [EnCodec [21]](2022.10.24_EnCodec.md)) or decompose speech into different factors (choi2022nansy++, [SpeechTokenizer [43]](2023.08.31_SpeechTokenizer.md); [FACodec [22]](2024.03.05_FACodec.md)), and decoders that reconstruct speech from encoded features with minimal loss of information.
 > Also, pretrained speech SSL models have been utilized to extract rich linguistic content of speech, and synthesizers are trained to restore speech audio from those features \cite{choi2021nansy, polyak2021resynthesis, choi2022nansy++,  lee2022hierspeech, lee2023hierspeech++, guo2023quickvc}.
 > These SSL-based methods often utilize separate source modeling (e.g., pitch) and speaker encoding, since SSL model encoders tend to marginalize out acoustic and speaker information \cite{chen2022spkinfo, pasad2023comparative}.
 > We categorize all these kinds of closed-loop frameworks utilizing neural networks for both encoding and decoding as \emph{neural codecs}.
@@ -131,7 +131,7 @@
 
 > To bridge this interpretability and controllability gap, we propose neural articulatory inversion and synthesis as a new type of neural codec that can provide an interpretable and controllable coding of speech.
 
-### Articulatory Analysis
+### A.Articulatory Analysis
 
 > The articulatory encoding is extracted by articulatory analysis of 3 different aspects of speech: vocal-tract articulation, source features, and speaker identity (Fig. \ref{fig:pipeline}). 
 
@@ -147,8 +147,8 @@
 > We use the SSL-linear AAI approach proposed by \cite{cho2023evidence, cho2023self}.
 > The SSL-linear model is built by training a linear mapping from SSL features to EMA, while keeping the SSL encoder weights frozen.
 > This simple mapping can effectively find a linear subspace in the SSL feature space which is highly correlated with EMA, proven by previous probing studies \cite{cho2023evidence,cho2023self}.
-> We use the WavLM Large model \cite{chen2022wavlm}, which shows the highest correlation amongst speech SSL models as reported in \cite{cho2023evidence}.
-> Note that the linear head is the only fitted part here, thus, maintaining the generalization capacity of the WavLM encoder that is attained by pretraining on large-scale speech data and adversarial data augmentation \cite{chen2022wavlm}.
+> We use the [WavLM [51]](../Speech_Representaion/2021.10.26_WavLM.md) Large model, which shows the highest correlation amongst speech SSL models as reported in \cite{cho2023evidence}.
+> Note that the linear head is the only fitted part here, thus, maintaining the generalization capacity of the WavLM encoder that is attained by pretraining on large-scale speech data and adversarial data augmentation ([WavLM [51]](../Speech_Representaion/2021.10.26_WavLM.md)).
 > Furthermore, the speaker information tends to diminish after a few early layers \cite{chen2022spkinfo}, which indicates the mapping can be speaker-agnostic, further contributing to multi-speaker generalizability. 
 >
 > The original 200 Hz EMA data is downsampled to 50 Hz to match the sampling rate of the SSL features, and z-scored within utterances.
@@ -177,19 +177,19 @@
 > Then, the FFN projects the average feature to a speaker embedding with 64 channels.
 > This speaker identity encoding is indispensable to fully map out multi-speaker speech.
 
-### Articulatory Synthesis
+### B.Articulatory Synthesis
 
-> We adopt HiFi-GAN as the vocoder for articulatory synthesis \cite{kong2020hifi, wu2022artsynth, polyak2021resynthesis}.
+> We adopt [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md) as the vocoder for articulatory synthesis ([HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md); wu2022artsynth, polyak2021resynthesis).
 > The vocoder is trained to synthesize speech audio with a 16K Hz sampling rate from articulatory features defined in \S\ref{methods:inversion} and \S\ref{methods:source}.
 > To condition the generation on the speaker embedding, we apply FiLM \cite{perez2018film} to each convolution module with different receptive fields in the HiFi-GAN architecture, which modulates the output channels of each module.
-> We adopt the same loss functions as \cite{kong2020hifi}: Mel-spectrogram loss for reconstruction and multi-period and multi-scale discriminator loss for GAN training. 
+> We adopt the same loss functions as [HiFi-GAN [56]](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md): Mel-spectrogram loss for reconstruction and multi-period and multi-scale discriminator loss for GAN training. 
 
-### Dataset
+### C.Dataset
 
-> For training the vocoder, we use LibriTTS-R \cite{koizumi2023librittsr}, an enhanced version of LibriTTS \cite{zen2019libritts}.
+> For training the vocoder, we use [LibriTTS-R [58]](../../Datasets/LibriTTS-R.md), an enhanced version of [LibriTTS [59]](../../Datasets/2019.04.05_LibriTTS.md).
 > The dataset is comprised of 585 hours of reading audiobooks ((555, 15, 15) hours for (train, dev, test) sets).
 > The original 24K Hz audio is downsampled to 16K Hz.
-> We use VCTK \cite{veaux2017vctk} to further evaluate the generalizability of the model to a broader range of speakers and accents.
+> We use [VCTK [60]](../../Datasets/2012.08.00_VCTK.md) to further evaluate the generalizability of the model to a broader range of speakers and accents.
 > The entire VCTK dataset is not included in the training set and is only used for evaluation. 
 >
 > Note that only the FFN in the speaker identity encoding and the vocoder are updated in the large-scale training (orange modules in Fig. \ref{fig:pipeline}), and the rest of the pipeline remains fixed while training.
