--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -128,3 +128,10 @@
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
+
+> In this paper, we address the challenges of enhancing real-time interaction by introducing full duplex modeling (FDM) in interactive speech language models (iSLM). 
+> We introduce listen-while-speaking language model(LSLM), an innovative end-to-end model designed to handle real-time turn-taking. LSLM integrates a token-based decoder-only TTS model for speech generation and a streaming SSL encoder for audio input, enabling simultaneous listening and speaking. 
+> We propose three strategies for fusing duplex signals: early fusion, middle fusion, and late fusion. Among these, Middle Fusion demonstrates a superior balance between speech generation and real-time interaction capabilities. 
+> The proposed LSLM is evaluated in two settings: command-based FDM and voice-based FDM. Our experiments show that LSLM is robust to noisy environments and responsive to diverse instructions from unseen speakers, achieving effective duplex communication with minimal impact on system performance. 
+> Our work is an initial exploration into full duplex interactive speech language models, and there is still a long way to go to achieve smooth human-computer speech interaction. 
+> There is a lot to explore in the future, such as developing speech-in speech-out dialogue systems with full duplex modeling ability, incorporating speaker-following capability to identify interrupting speakers, and exploring audiovisual co-guidance for improved turn-taking. 
