--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -43,6 +43,9 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>原文</summary>
+
 > Dialogue serves as the most natural manner of human-computer interaction (HCI). 
 > Recent advancements in speech language models (SLM), have significantly enhanced speech-based conversational AI. 
 > However, these models are limited to turn-based conversation, lacking the ability to interact with humans in real-time spoken scenarios, for example, being interrupted when the generated content is not satisfactory. 
@@ -56,6 +59,22 @@
 > This study aims to advance the development of interactive speech dialogue systems, enhancing their applicability in real-world contexts.
 > Demo can be found at https://ddlbojack.github.io/LSLM.
 
+</details>
+<br>
+
+对话是**人类与计算机交互 (Human-Computer Interaction, HCI)** 最自然的方式.
+近年来, **语音语言模型 (Speech Language Model, SLM)** 的进步显著提升了基于语音的对话式人工智能.
+然而, 这些模型仅限于轮流对话, 缺乏在实时口语场景中与人类互动的能力, 例如在生成内容不满意时无法被打断.
+为了解决这些限制, 我们探索了**交互式语音语言模型 (interactive Speech Language Model, iSLM)** 中的**全双工建模 (Full Duplex Modeling, FDM)**, 重点是增强实时交互, 更明确地探索打断的基本能力.
+我们引入了一种新颖的模型设计, 即***边听边说语言模型 (Listening-while-Speaking Language Model, LSLM)***, 这是一个配备了听和说通道的端到端系统。
+我们的 ***LSLM*** 采用基于 Token 的仅解码器文本转语音进行语音生成， 并使用流式自监督学习编码器进行实时音频输入.
+***LSLM*** 融合了两个通道进行自回归生成, 并实时检测对话轮换.
+我们探索了三种融合策略: 早期融合, 中期融合, 晚期融合. 其中中期融合在语音生成和实时交互之间达到了最佳平衡.
+两种实验设置: 基于命令的 FDM 和基于语音的 FDM, 展示了 ***LSLM*** 对噪声的鲁棒性和对多样指令的敏感性.
+我们的结果突出了 ***LSLM*** 能够在对现有系统影响较小的情况下实现双工通信的能力.
+本研究旨在推动交互式语音对话系统的发展, 增强其在现实世界中的应用性.
+演示可在 https://ddlbojack.github.io/LSLM 找到.
+
 ## 1.Introduction: 引言
 
 > Dialogue is the most natural way of **Human-Computer Interaction (HCI)**. 
@@ -66,7 +85,7 @@
 > Leveraging techniques from text LLMs, the speech language model (SLM) processes speech similarly to text. 
 > This paradigm involves encoding the speech signal into discrete tokens or continuous embeddings, modeling them with a language model, and decoding the speech tokens or embeddings back to the speech signal.
 > Some studies ([GSLM [19]](2021.02.01_GSLM.md); [pGSLM [17]](2021.09.07_pGSLM.md); [dGSLM [26]](2022.03.30_dGSLM.md)) utilizes this paradigm for speech continuation, generating expressive speech and natural multi-round dialogue. 
-> Other research employs this paradigm to task-specific applications, such as decoder-only high-fidelity TTS ([VALL-E [40]](2023.01.05_VALL-E.md); [AudioLM [03]](2022.09.07_AudioLM.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.04_CosyVoice.md)) and decoder-only streaming ASR~\citep{seide2024speech, tsunoo2024decoder, chen2024streaming, chen2024bestow}
+> Other research employs this paradigm to task-specific applications, such as decoder-only high-fidelity TTS ([VALL-E [40]](2023.01.05_VALL-E.md); [AudioLM [03]](2022.09.07_AudioLM.md); [Seed-TTS [31]](2024.06.04_Seed-TTS.md); [CosyVoice [13]](2024.07.04_CosyVoice.md)) and decoder-only streaming ASR (seide2024speech [33], tsunoo2024decoder [38], chen2024streaming [04], [BESTOW [08]](2024.06.28_BESTOW.md))
 > Moreover, [SpeechGPT [48]](2023.05.18_SpeechGPT.md) and [LauraGPT [05]](2023.10.07_LauraGPT.md) initialize SLMs using LLMs, expanding speech tokens to the LLM vocabulary and continuing training on speech.
 > This empowers SLM to comprehend semantic information and equips SLM with dialogue capability. 
 > Despite these advances, all these models are limited to turn-based conversations and cannot handle real-time sound or interruptions, limiting their applicability in real-life scenarios. 
@@ -79,10 +98,10 @@
 > As a result, latency remains perceivable and the paralinguistic ability is still lacking. 
 > We believe the FDM capability should be an intrinsic capability of SLMs, enabling simultaneous listening and speaking. 
 >
-> To engage FDM capability for iSLM, we propose \textbf{L}istening-while-\textbf{S}peaking \textbf{L}anguage \textbf{M}odel (***LSLM***), an end-to-end model with both listening and speaking channels. 
+> To engage FDM capability for iSLM, we propose ***Listening-while-Speaking Language Model (LSLM)***, an end-to-end model with both listening and speaking channels. 
 > The proposed ***LSLM*** uses a token-based decoder-only TTS to model the ability to speak and a streaming self-supervised learning (SSL) encoder to model the ability to listen. 
 > ***LSLM*** fuses these two channels and detects turn-taking in real time.
-> We explore three strategies for fusing duplex signals: \textbf{Early Fusion}, \textbf{Middle Fusion}, and \textbf{Late Fusion}. 
+> We explore three strategies for fusing duplex signals: **Early Fusion**, **Middle Fusion**, and **Late Fusion**. 
 > Experiments demonstrate that middle fusion achieves a good balance between speech generation and real-time interaction capabilities.
 >
 > In addition, interactive dialogue systems for realistic scenarios have two important features: 
@@ -95,8 +114,8 @@
 
 > Our contributions are summarized as follows:
 >
-> - We formulate an important task, **F**ull **D**uplex **M**odeling (**FDM**), applied in the interactive speech language model (**iSLM**). 
-> - We propose **Listening-while-Speaking Language Model (***LSLM***)**, an end-to-end single model with the focus of modeling the turn-taking problem.
+> - We formulate an important task, **Full Duplex Modeling (FDM)**, applied in the **interactive speech language model (iSLM)**. 
+> - We propose ***Listening-while-Speaking Language Model (LSLM)***, an end-to-end single model with the focus of modeling the turn-taking problem.
 > ***LSLM*** can listen to the outside signal and provide feedback in real time while speaking.
 > - We introduce three methods for fusing duplex signals: **Early Fusion**, **Middle Fusion**, and **Late Fusion**, with Middle Fusion providing the optimal tradeoff between speech generation and real-time interaction. 
 > - We tested the FDM ability of the proposed ***LSLM*** in two scenarios: **Command-based FDM** and **Voice-based FDM**.
