--- a/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
+++ b/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
@@ -201,7 +201,7 @@ $$
 #### Speaker Identification (SID)
 
 > We employ an [ECAPA-TDNN](../_tmp/ECAPA-TDNN.md) model to determine the speaker identity of each utterance.
-> The widely used [VoxCeleb](../../Datasets/VoxCeleb.md) is adopted, and the evaluation metric is accuracy (ACC).
+> The widely used [VoxCeleb](../../Datasets/2017.06.26_VoxCeleb.md) is adopted, and the evaluation metric is accuracy (ACC).
 
 #### Emotion Recognition (ER)
 
