Update LSLM conclusion

--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -277,7 +277,7 @@ $$
 > Table \ref{tab:data_details} summarizes the datasets and experimental settings. 
 > For the TTS datasets, we utilize the [LibriTTS dataset [47]](../../Datasets/2019.04.05_LibriTTS.md) with $585$ hours of speech-text pairs for training and validation.
 > LibriTTS-testsetB ([UniCATS [12]](../_tmp/UniCATS.md)) is adopted for testing, which contains $500$ utterances sampled from the test-clean subset of LibriTTS with 37 unseen speakers. 
-> Background noise is uniformly sourced from the Freesound portion of the [MUSAN dataset [34]](../../Datasets/MUSAN.md), which includes high-frequency noise such as telephone ringing and sounds of the explosion, as well as low-frequency noise such as white noise and traffic noise. 
+> Background noise is uniformly sourced from the Freesound portion of the [MUSAN dataset [34]](../../Datasets/2015.10.28_MUSAN.md), which includes high-frequency noise such as telephone ringing and sounds of the explosion, as well as low-frequency noise such as white noise and traffic noise. 
 > The model needs to distinguish the human voice from the noise, so as to avoid turning-taking with any random input signals and avoid trivial solutions. 
 > Different interruption data is constructed based on the FDM settings.
 
@@ -374,8 +374,11 @@ $$
 
 ## 6.Conclusions: 结论
 
+<details>
+<summary>原文</summary>
+
 > In this paper, we address the challenges of enhancing real-time interaction by introducing full duplex modeling (FDM) in interactive speech language models (iSLM). 
-> We introduce listen-while-speaking language model(***LSLM***), an innovative end-to-end model designed to handle real-time turn-taking.
+> We introduce ***Listen-while-Speaking Language Model (LSLM)***, an innovative end-to-end model designed to handle real-time turn-taking.
 > ***LSLM*** integrates a token-based decoder-only TTS model for speech generation and a streaming SSL encoder for audio input, enabling simultaneous listening and speaking. 
 > We propose three strategies for fusing duplex signals: early fusion, middle fusion, and late fusion.
 > Among these, Middle Fusion demonstrates a superior balance between speech generation and real-time interaction capabilities. 
@@ -383,3 +386,16 @@ $$
 > Our experiments show that ***LSLM*** is robust to noisy environments and responsive to diverse instructions from unseen speakers, achieving effective duplex communication with minimal impact on system performance. 
 > Our work is an initial exploration into full duplex interactive speech language models, and there is still a long way to go to achieve smooth human-computer speech interaction. 
 > There is a lot to explore in the future, such as developing speech-in speech-out dialogue systems with full duplex modeling ability, incorporating speaker-following capability to identify interrupting speakers, and exploring audiovisual co-guidance for improved turn-taking. 
+
+</details>
+<br>
+
+本文通过向**交互式语音语言模型 (interactive Speech Language Model, iSLM)** 中引入**全双工建模 (Full Duplex Modeling, FDM)** 来应对提升实时交互的挑战.
+我们提出了***听说语言模型 (Listen-while-Speaking Language Model, LSLM)***, 一种新的端到端模型, 专门设计用于处理实时轮流发言.
+***LSLM*** 集成了一个基于 Token 的仅解码器架构的文本转语音模型用于语音生成, 以及一个流式自监督编码器用于处理音频输入, 使得模型能够同时听和说.
+我们提出了三种融合双工信号的策略: 早期融合, 中期融合, 后期融合.
+在这些策略中, 中期融合表现出了最佳的平衡.
+我们在两个设置中评估了 ***LSLM***: 命令式 FDM 和声音式 FDM.
+我们的实验显示 ***LSLM*** 对嘈杂环境具有鲁棒性, 并对来自未见过说话人的多样指令做出了响应, 实现了有效的双工通信, 且对系统性能影响最小.
+我们的工作是对全双工交互式语音语言模型的初步探索, 要实现流畅的人机语音交互还有很长的路要走.
+未来还有很多可探索空间, 例如开发具备全双工建模能力的语音输入-语音输出对话系统, 整合跟随说话人的能力以识别打断的说话人, 以及探索视听联合引导以改善轮流发言.
