--- a/Models/Diffusion/2024.06.27_DEX-TTS.md
+++ b/Models/Diffusion/2024.06.27_DEX-TTS.md
@@ -31,7 +31,7 @@
 - 被引: ?
 - 数据:
   - [VCTK](../../Datasets/2012.08.00_VCTK.md)
-  - [ESD](../../Datasets/ESD.md)
+  - [ESD](../../Datasets/2020.10.28_ESD.md)
 - 对比:
   - [MetaStyleSpeech](../../Models/_tmp/MetaStyleSpeech.md) + [HiFi-GAN](../../Models/TTS3_Vocoder/2020.10.12_HiFi-GAN.md)
   - [YourTTS](../../Models/E2E/2021.12.04_YourTTS.md)
