--- a/Models/Flow/2024.06.26_E2_TTS.md
+++ b/Models/Flow/2024.06.26_E2_TTS.md
@@ -464,7 +464,7 @@ $$
 [^32]: [BigVGAN](../../Models/TTS3_Vocoder/2022.06.09_BigVGAN.md)
 [^33]: [Classifier-Free Diffusion Guidance]
 [^34]: [An Investigation of Noise Robustness for Flow-Matching-Based Zero-Shot TTS]
-[^35]: [LibriSpeech-PC](../../Datasets/LibriSpeech-PC.md)
+[^35]: [LibriSpeech-PC](../../Datasets/2023.10.04_LibriSpeech-PC.md)
 [^36]: [LibriSpeech](../../Datasets/2015.04.19_LibriSpeech.md)
 [^37]: [HuBERT](../../Models/Speech_Representaion/2021.06.14_HuBERT.md)
 [^38]: [WavLM](../../Models/Speech_Representaion/2021.10.26_WavLM.md)
