--- a/Models/Diffusion/2023.04.18_NaturalSpeech2.md
+++ b/Models/Diffusion/2023.04.18_NaturalSpeech2.md
@@ -138,7 +138,7 @@
 > Different generative models have been applied to speech or audio synthesis, and among these, autoregressive models and diffusion models are the two most prominent methods.
 > Autoregressive models have long been used in speech synthesis for waveform generation ([WaveNet](../../Models/TTS3_Vocoder/2016.09.12_WaveNet.md)) or acoustic feature generation ([Tacotron](../../Models/TTS2_Acoustic/2017.03.29_Tacotron.md)).
 > Inspired by the success of autoregressive models in language generation [26]; [27]; [28], autoregressive models have been applied in speech and audio generation ([AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [AudioGen](../../Models/Speech_LLM/2022.09.30_AudioGen.md); [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [FoundationTTS](../../Models/Speech_LLM/2023.03.06_FoundationTTS.md)).
-> Meanwhile, diffusion models have also been widely used in speech synthesis for waveform generation ([DiffWave](../../Models/TTS3_Vocoder/2020.09.21_DiffWave.md); [WaveGrad](../../Models/TTS3_Vocoder/2020.09.02_WaveGrad.md)) and acoustic feature generation ([Diff-TTS](../../Models/TTS2_Acoustic/Diff-TTS.md); [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
+> Meanwhile, diffusion models have also been widely used in speech synthesis for waveform generation ([DiffWave](../../Models/TTS3_Vocoder/2020.09.21_DiffWave.md); [WaveGrad](../../Models/TTS3_Vocoder/2020.09.02_WaveGrad.md)) and acoustic feature generation ([Diff-TTS](../TTS2_Acoustic/2021.04.03_Diff-TTS.md); [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)).
 
 > Although both models are based on iterative computation (following the left-to-right process or the denoising process), autoregressive models are more sensitive to sequence length and error propagation, which cause unstable prosody and robustness issues (e.g., word skipping, repeating, and collapse).
 > Considering text-to-speech has a strict monotonic alignment and strong source-target dependency, we leverage diffusion models enhanced with duration prediction and length expansion, which are free from robust issues.
@@ -338,7 +338,7 @@ where the first term is the data loss, the second term is the score loss, and th
 > More details of the model configurations are shown in Appendix A.
 
 > #### Model Comparison 
-> We choose the previous zero-shot TTS model [YourTTS](../../Models/E2E/2021.12.04_YourTTS.md) as the baseline, with the official code and pre-trained checkpoint4, which is trained on [VCTK](../../Datasets/2012.08.00_VCTK.md), [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md) and [TTS-Portuguese](../../Datasets/TTS-Portuguese.md).
+> We choose the previous zero-shot TTS model [YourTTS](../../Models/E2E/2021.12.04_YourTTS.md) as the baseline, with the official code and pre-trained checkpoint4, which is trained on [VCTK](../../Datasets/2012.08.00_VCTK.md), [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md) and [TTS-Portuguese](../../Datasets/2020.05.11_TTS-Portuguese.md).
 > We also choose [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md) that is based on discrete audio codec and autoregressive language model for comparison, which can help demonstrate the advantages of the designs in ***NaturalSpeech2***.
 > We directly collect some audio samples from its demo page for comparison.
 
